welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for (compteur <- 1 to 6) {
    if (estSurBiscuit()) {
      vuBiscuit==true
    }
    return vuBiscuit
    avance()
  }
  for (compteure <- 1 to 6) {
   recule()
  }
}